# starter-cpp

./: .gitignore  CMakeLists.txt  README.md
CMakeModules/: FindJsonCpp.cmake
src/: CMakeLists.txt  main.cpp
src/DBO/: CommandLineOption.cpp  CommandLineOption.h  Result.h  Result.hxx
src/Interface/: CommandLineParser.cpp  CommandLineParser.h  MainClass.cpp  MainClass.h
tests/: CMakeLists.txt  test-main.cpp
