cmake_minimum_required(VERSION 2.8)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules/")
set(PROJECT_NAME project)
project(${PROJECT_NAME})
find_package(GTest)
add_subdirectory(src)
if (GTEST_FOUND)
    enable_testing()
    add_subdirectory(tests)
endif (GTEST_FOUND)